--- a/html/simple.html
+++ b/html/simple.html
@@ -22,60 +22,69 @@
             </li>
         </ul>
     </div>
+    
 
-    <div id="recipe" class="test" hidden>
-        <h2 id="title"></h2>
-        <div>
-            <label>Description</label>
-            <div id="description"></div>
-        </div>
-        <div>
-            <label>Stuff</label>
-            <span id="stuff"></span>
-        </div>
-        <div>
-            <input type="button" id="sort" />
-        </div>
-        <div class="segment">
-            <label>Ingredients</label>
-            <div id="ingredients">
-                No Ingredients :(
-                <div class="ingredient">
-                    <div id="display">
-                        <span id="qty"></span>
-                        <span id="item"></span>
-                        <input id="showbtn" type="button" value="edit" />
-                        <input id="deletebtn" type="button" value="x" />
-                    </div>
-                    <div id="edit">
-                        <input type="text" id="qty" />
-                        <input type="text" id="item" />
-                        <input type="button" id="okbtn" />
-                        <input type="button" id="cancelbtn" />
-                    </div>
-                </div>
-            </div>
-
-        </div>
-        <div id="newIngredient">
-            <form>
-                <input id="quantity" type="text" />
-                <input id="item" type="text" />
-                <input id="btn" type="button" value="Add" />
-            </form>
-        </div>
-        <div class="segment">
-            <label>Preparation</label>
-            <span>LOOK AT ME!</span>
-        </div>
-        <input type="button" id="dumpus" />
+    <div id="recipe">
+        Please make a selection
     </div>
 
-    <ul id="steps">
-        <li>
-            <span id="step"></span>
-            <span id="detail"></span>
-        </li>
-    </ul>
+    <span id="recipe-template" hidden>
+        <div id="recipe" class="test" hidden>
+            <h2 id="title"></h2>
+            <div>
+                <label>Description</label>
+                <div id="description"></div>
+            </div>
+            <div>
+                <label>Stuff</label>
+                <span id="stuff"></span>
+            </div>
+            <div>
+                <input type="button" id="sort" />
+            </div>
+            <div class="segment">
+                <label>Ingredients</label>
+                <div id="ingredients">
+                    No Ingredients :(
+                    <div class="ingredient">
+                        <div id="display">
+                            <span id="qty"></span>
+                            <span id="item"></span>
+                            <input id="showbtn" type="button" value="edit" />
+                            <input id="deletebtn" type="button" value="x" />
+                        </div>
+                        <div id="edit">
+                            <input type="text" id="qty" />
+                            <input type="text" id="item" />
+                            <input type="button" id="okbtn" />
+                            <input type="button" id="cancelbtn" />
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div id="newIngredient">
+                <form>
+                    <input id="quantity" type="text" />
+                    <input id="item" type="text" />
+                    <input id="btn" type="button" value="Add" />
+                </form>
+            </div>
+            <div class="segment">
+                <label>Preparation</label>
+                <span id="steps">LOOK AT ME!</span>
+            </div>
+            <input type="button" id="dumpus" />
+        </div>
+    </span>
+
+    <span id="steps-template" hidden>
+        <ul id="steps">
+            <li>
+                <span id="step"></span>
+                <span id="detail"></span>
+            </li>
+        </ul>
+    </span>
 </body>
 </html>
