Fixing a few of the bugs, nested templates still not working. Sort is busted as is dependent properties.

--- a/html/simple.html
+++ b/html/simple.html
@@ -29,7 +29,7 @@
     </div>
 
     <span id="recipe-template" hidden>
-        <div id="recipe" class="test" hidden>
+        <div id="recipe" class="test">
             <h2 id="title"></h2>
             <div>
                 <label>Description</label>
