--- a/html/simple.html
+++ b/html/simple.html
@@ -7,82 +7,42 @@
     <script type="text/javascript" src="../lib/cartographer.js"></script>
     <script type="text/javascript" src="../ext/replicant.js"></script>
     <script type="text/javascript" src="../ext/infuser.js"></script>
-    <script type="text/javascript" src="../ext/trafficCop.min.js"></script>
+    <script type="text/javascript" src="../ext/trafficCop.js"></script>
     <script type="text/javascript" src="../html/simple.coffee"></script>
     <link href="simple.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 
     <div id="recipes">
-        <span class="heading">Recipes</span><input type="button" value="+" />
-        <ul id="list">
-            <li>
-                <div id="title"></div>
-            </li>
-        </ul>
+        
     </div>
-    
+
     <div id="recipe">
         Please make a selection
     </div>
 
-    <span id="recipe-template" hidden>
-        <div id="recipe" class="test">
-            <h2 id="title"></h2>
-            <div>
-                <label>Description</label>
-                <div id="description"></div>
-            </div>
-            <div>
-                <label>Stuff</label>
-                <span id="stuff"></span>
-            </div>
-            <div>
-                <input type="button" id="sort" />
-            </div>
-            <div class="segment">
-                <label>Ingredients</label>
-                <div id="ingredients">
-                    No Ingredients :(
-                    <div class="ingredient">
-                        <div id="display">
-                            <span id="qty"></span>
-                            <span id="item"></span>
-                            <input id="showbtn" type="button" value="edit" />
-                            <input id="deletebtn" type="button" value="x" />
-                        </div>
-                        <div id="edit">
-                            <input type="text" id="qty" />
-                            <input type="text" id="item" />
-                            <input type="button" id="okbtn" />
-                            <input type="button" id="cancelbtn" />
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-            <div id="newIngredient">
-                <form>
-                    <input id="quantity" type="text" />
-                    <input id="item" type="text" />
-                    <input id="btn" type="button" value="Add" />
-                </form>
-            </div>
-            <div class="segment">
-                <label>Preparation</label>
-                <span id="steps">LOOK AT ME!</span>
-            </div>
-            <input type="button" id="dumpus" />
+    <span id="recipes-template" hidden>
+        <div id="recipes">
+            <span class="heading">Recipes</span><input type="button" value="+" />
+            <ul id="list">
+                <li>
+                    <div id="title"></div>
+                </li>
+            </ul>
         </div>
     </span>
 
-    <span id="steps-template" hidden>
+    <!--<span id="recipe-template" hidden>
+
+    </span>-->
+
+    <!--<span id="steps-template" hidden>
         <ul id="steps">
             <li>
                 <span id="step"></span>
                 <span id="detail"></span>
             </li>
         </ul>
-    </span>
+    </span>-->
 </body>
 </html>
