Updates and bug fixes.

--- a/html/tmpl/recipe.html
+++ b/html/tmpl/recipe.html
@@ -8,6 +8,7 @@
         <label>Stuff</label>
         <span id="stuff"></span>
     </div>
+    <input type="button" id="swap" />
     <div>
         <input type="button" id="sort" />
     </div>
