--- a/html/simple.html
+++ b/html/simple.html
@@ -4,7 +4,7 @@
     <script type="text/javascript" src="../ext/DOMBuilder.min.js"></script>
     <script type="text/javascript" src="../ext/underscore-min.js"></script>
     <script type="text/javascript" src="../ext/postal.min.js"></script>
-    <script type="text/javascript" src="../ext/infuser.js"></script>
+    <script type="text/javascript" src="../ext/infuser-0.2.0.js"></script>
     <script type="text/javascript" src="../ext/trafficCop.js"></script>
     <script type="text/javascript" src="../lib/cartographer.js"></script>
     <script type="text/javascript" src="../html/simple.coffee"></script>
