--- a/html/tmpl/recipe.html
+++ b/html/tmpl/recipe.html
@@ -7,10 +7,7 @@
     <div class="segment">
         <label>Ingredients</label>
         <div id="ingredients">
-            <div class="ingredient">
-                <span id="qty"></span>
-                <span id="item"></span>
-            </div>
+            <span>nonez0rz</span>
         </div>
     </div>
     <div id="newIngredient">
