nearing a working prototype

--- a/html/tmpl/alt-recipe.html
+++ b/html/tmpl/alt-recipe.html
@@ -1,18 +1,18 @@
-<div id="recipe" class="test">
-    <h2 id="title"></h2>
+<div map-id="recipe" class="test">
+    <h2 map-id="title"></h2>
 
-    <input type="button" id="swap" />
-    <h3><span id="ingredientCount"></span> ingredients</h3>test
-    <div id="newIngredient">
+    <input type="button" map-id="swap" />
+    <h3><span map-id="ingredientCount"></span> ingredients</h3>test
+    <div map-id="newIngredient">
         <form>
-            <input id="quantity" type="text" />
-            <input id="item" type="text" />
-            <input id="btn" type="button" value="Add" />
+            <input map-id="quantity" type="text" />
+            <input map-id="item" type="text" />
+            <input map-id="btn" type="button" value="Add" />
         </form>
     </div>
     <div class="segment">
         <label>Preparation</label>
-        <span id="steps">LOOK AT ME!</span>
+        <span map-id="steps">LOOK AT ME!</span>
     </div>
-    <input type="button" id="dumpus" />
+    <input type="button" map-id="dumpus" />
 </div>
