--- a/html/tmpl/ingredient.html
+++ b/html/tmpl/ingredient.html
@@ -1,4 +1,4 @@
 <div class="ingredient">
-    <span id="qty"></span>
-    <span id="item"></span>
+    <span map-id="qty"></span>
+    <span map-id="item"></span>
 </div>
