--- a/html/tmpl/recipe.html
+++ b/html/tmpl/recipe.html
@@ -1,24 +1,24 @@
-<div id="recipe" class="test">
-    <h2 id="title"></h2>
+<div map-id="recipe" class="test">
+    <h2 map-id="title"></h2>
     <div>
         <label>Description</label>
-        <div id="description"></div>
+        <div map-id="description"></div>
     </div>
     <div class="segment">
         <label>Ingredients</label>
-        <div id="ingredients">
+        <div map-id="ingredients">
             <span>nonez0rz</span>
         </div>
     </div>
-    <div id="newIngredient">
+    <div map-id="newIngredient">
         <form>
-            <input id="quantity" type="text" />
-            <input id="item" type="text" />
-            <input id="btn" type="button" value="Add" />
+            <input map-id="quantity" type="text" />
+            <input map-id="item" type="text" />
+            <input map-id="btn" type="button" value="Add" />
         </form>
     </div>
     <div class="segment">
         <label>Preparation</label>
-        <span id="steps">LOOK AT ME!</span>
+        <span map-id="steps">LOOK AT ME!</span>
     </div>
 </div>
