--- a/html/tmpl/steps.html
+++ b/html/tmpl/steps.html
@@ -1,6 +1,6 @@
-<ul id="steps">
+<ul map-id="steps">
     <li>
-        <span id="step"></span>
-        <span id="detail"></span>
+        <span map-id="step"></span>
+        <span map-id="detail"></span>
     </li>
 </ul>
