--- a/html/simple.html
+++ b/html/simple.html
@@ -1,31 +1,24 @@
 <html>
 <head>
-    <script type="text/javascript" src="../ext/jquery-1.6.4.min.js"></script>
-    <script type="text/javascript" src="../ext/DOMBuilder.min.js"></script>
-    <script type="text/javascript" src="../ext/underscore-min.js"></script>
-    <script type="text/javascript" src="../ext/postal.min.js"></script>
-    <script type="text/javascript" src="../ext/infuser-0.2.0.js"></script>
-    <script type="text/javascript" src="../ext/trafficCop.js"></script>
-    <script type="text/javascript" src="../lib/cartographer.js"></script>
-    <script type="text/javascript" src="../html/simple.coffee"></script>
+    <script data-main="simple" type="text/javascript" src="../ext/requirejs-1.0.5.js"></script>
     <link href="simple.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 
-    <div id="recipes">
+    <div map-id="recipes">
 
     </div>
 
-    <div id="recipe">
+    <div map-id="recipe">
         Please make a selection
     </div>
 
-    <span id="recipes-template" hidden>
-        <div id="recipes">
+    <span map-id="recipes-template" hidden>
+        <div map-id="recipes">
             <span class="heading">Recipes</span><input type="button" value="+" />
-            <ul id="list">
+            <ul map-id="list">
                 <li>
-                    <div id="title"></div>
+                    <div map-id="title"></div>
                 </li>
             </ul>
         </div>
