In-place, external templating passing tests.

--- a/spec/test-runner.html
+++ b/spec/test-runner.html
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="flat-template-spec.coffee"></script>
     <script type="text/javascript" src="iterative-template-spec.coffee"></script>
     <script type="text/javascript" src="nested-template-spec.coffee"></script>
+    <script type="text/javascript" src="parent-child-template-spec.coffee"></script>
     <link rel="stylesheet" type="text/css" href="qunit-1.3.0pre.css" />
 </head>
 <body >
