--- a/html/tmpl/ingredient.html
+++ b/html/tmpl/ingredient.html
@@ -1,4 +1,6 @@
-<div class="ingredient">
-    <span map-id="qty"></span>
-    <span map-id="item"></span>
+<div map-id="ingredients">
+    <div class='ingredient'>
+        <span map-id="qty" class='qty'></span>
+        <span map-id="item" class='item'></span>
+    </div>
 </div>
