--- a/html/tmpl/recipe.html
+++ b/html/tmpl/recipe.html
@@ -7,7 +7,7 @@
     <div class="segment">
         <label>Ingredients</label>
         <div map-id="ingredients">
-            <span>nonez0rz</span>
+            <span></span>
         </div>
     </div>
     <div map-id="newIngredient">
