Working on clean up and adding new feature.

--- a/html/simple.html
+++ b/html/simple.html
@@ -5,6 +5,11 @@
 </head>
 <body>
 
+    <div id='test'>
+        <h3>O</h3>nce upon a <span>time</span>.
+    </div>
+
+
     <div map-id="recipes">
 
     </div>
