--- a/spec/test-runner.html
+++ b/spec/test-runner.html
@@ -4,7 +4,7 @@
     <script type="text/javascript" src="../ext/jquery-1.7.1.js"></script>
     <script type="text/javascript" src="../ext/DOMBuilder.min.js"></script>
     <script type="text/javascript" src="../ext/underscore-min.js"></script>
-    <script type="text/javascript" src="../ext/postal-0.4.0.js"></script>
+    <script type="text/javascript" src="../ext/postal.js"></script>
     <script type="text/javascript" src="../ext/trafficCop-0.3.0.js"></script>
     <script type="text/javascript" src="../ext/infuser.js"></script>
     <script type="text/javascript" src="../ext/qunit-1.3.0pre.js"></script>
@@ -23,6 +23,7 @@
     <script type="text/javascript" src="nested-template-spec.coffee"></script>
     <script type="text/javascript" src="parent-child-template-spec.coffee"></script>
     <script type="text/javascript" src="iterative-external-template-spec.coffee"></script>
+    <script type="text/javascript" src="interpolated-template-spec.coffee"></script>
     <link rel="stylesheet" type="text/css" href="qunit-1.3.0pre.css" />
 </head>
 <body >
