--- a/html/simple.html
+++ b/html/simple.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <script type="text/javascript" src="../ext/DOMBuilder.min.js"></script>
     <script data-main="simple" type="text/javascript" src="../ext/requirejs-1.0.5.js"></script>
     <link href="simple.css" type="text/css" rel="stylesheet">
 </head>
