--- a/spec/test-runner.html
+++ b/spec/test-runner.html
@@ -24,6 +24,8 @@
     <script type="text/javascript" src="parent-child-template-spec.coffee"></script>
     <script type="text/javascript" src="iterative-external-template-spec.coffee"></script>
     <script type="text/javascript" src="interpolated-template-spec.coffee"></script>
+    <script type="text/javascript" src="regen-spec.coffee"></script>
+    <script type="text/javascript" src="add-spec.coffee"></script>
     <link rel="stylesheet" type="text/css" href="qunit-1.3.0pre.css" />
 </head>
 <body >
