Pre perf branch

--- a/spec/test-runner.html
+++ b/spec/test-runner.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="../src/sourceResolver.coffee"></script>
     <script type="text/javascript" src="../src/template.coffee"></script>
     <script type="text/javascript" src="template-source.coffee"></script>
+    <script type="text/javascript" src="iterative-throughput-spec.coffee"></script>
     <script type="text/javascript" src="complex-template-spec.coffee"></script>
     <script type="text/javascript" src="utility-spec.coffee"></script>
     <script type="text/javascript" src="flat-template-spec.coffee"></script>
