Tests passing but stack problems exist in sample app.

--- a/html/simple.html
+++ b/html/simple.html
@@ -6,20 +6,20 @@
 </head>
 <body>
 
-    <div map-id="recipes">
+    <div data-id="recipes">
 
     </div>
 
-    <div map-id="recipe">
+    <div data-id="recipe">
         Please make a selection
     </div>
 
-    <span map-id="recipes-template" hidden>
-        <div map-id="recipes">
+    <span id="recipes-template" hidden>
+        <div data-id="recipes">
             <span class="heading">Recipes</span><input type="button" value="+" />
-            <ul map-id="list">
+            <ul data-id="list">
                 <li>
-                    <div map-id="title"></div>
+                    <div data-id="title"></div>
                 </li>
             </ul>
         </div>
