--- a/html/tmpl/ingredient.html
+++ b/html/tmpl/ingredient.html
@@ -1,6 +1,6 @@
-<div map-id="ingredients">
+<div data-id="ingredients">
     <div class='ingredient'>
-        <span map-id="qty" class='qty'></span>
-        <span map-id="item" class='item'></span>
+        <span data-id="qty" class='qty'></span>
+        <span data-id="item" class='item'></span>
     </div>
 </div>
