--- a/html/tmpl/steps.html
+++ b/html/tmpl/steps.html
@@ -1,6 +1,6 @@
-<ul map-id="steps" class="steps">
+<ul data-id="steps" class="steps">
     <li>
-        <span map-id="step" class="step"></span>
-        <span map-id="detail" class="detail"></span>
+        <span data-id="step" class="step"></span>
+        <span data-id="detail" class="detail"></span>
     </li>
 </ul>
