--- a/html/tmpl/recipe.html
+++ b/html/tmpl/recipe.html
@@ -1,24 +1,24 @@
 <div class="test">
-    <h2 map-id="title"></h2>
+    <h2 data-id="title"></h2>
     <div>
         <label>Description</label>
-        <div map-id="description"></div>
+        <div data-id="description"></div>
     </div>
     <div class="segment">
         <label>Ingredients</label>
-        <div map-id="ingredients">
+        <div data-id="ingredients">
             <span></span>
         </div>
     </div>
-    <div map-id="newIngredient">
+    <div data-id="newIngredient">
         <form>
-            <input map-id="quantity" type="text" />
-            <input map-id="item" type="text" />
-            <input map-id="btn" type="button" value="Add" />
+            <input data-id="quantity" type="text" />
+            <input data-id="item" type="text" />
+            <input data-id="btn" type="button" value="Add" />
         </form>
     </div>
     <div class="segment">
         <label>Preparation</label>
-        <span map-id="steps">LOOK AT ME!</span>
+        <span data-id="steps">LOOK AT ME!</span>
     </div>
 </div>
