--- a/spec/test-runner.html
+++ b/spec/test-runner.html
@@ -20,12 +20,14 @@
     <script type="text/javascript" src="complex-template-spec.coffee"></script>
     <script type="text/javascript" src="utility-spec.coffee"></script>
     <script type="text/javascript" src="flat-template-spec.coffee"></script>
+    <script type="text/javascript" src="func-template-spec.coffee"></script>
+    <script type="text/javascript" src="embedded-template-spec.coffee"></script>
     <script type="text/javascript" src="iterative-template-spec.coffee"></script>
     <script type="text/javascript" src="nested-template-spec.coffee"></script>
     <script type="text/javascript" src="parent-child-template-spec.coffee"></script>
     <script type="text/javascript" src="iterative-external-template-spec.coffee"></script>
     <script type="text/javascript" src="interpolated-template-spec.coffee"></script>
-    <script type="text/javascript" src="regen-spec.coffee"></script>
+    <script type="text/javascript" src="change-spec.coffee"></script>
     <script type="text/javascript" src="add-spec.coffee"></script>
     <link rel="stylesheet" type="text/css" href="qunit-1.3.0pre.css" />
 </head>
@@ -35,5 +37,10 @@
     <div id="qunit-testrunner-toolbar"></div>
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
+
+
+	<div hidden="" id="page-template">
+		<span data-id="message"></span>
+	</div>
 </body>
 </html>
