--- a/spec/test-runner.html
+++ b/spec/test-runner.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <script type="text/javascript" src="../ext/jquery-1.7.1.js"></script>
-    <script type="text/javascript" src="../ext/DOMBuilder.min.js"></script>
+    <script type="text/javascript" src="../ext/DOMBuilder.html.min.js"></script>
     <script type="text/javascript" src="../ext/underscore-min.js"></script>
     <script type="text/javascript" src="../ext/postal.js"></script>
     <script type="text/javascript" src="../ext/trafficCop-0.3.0.js"></script>
@@ -18,7 +18,6 @@
     <script type="text/javascript" src="template-source.coffee"></script>
     <script type="text/javascript" src="iterative-throughput-spec.coffee"></script>
     <script type="text/javascript" src="complex-template-spec.coffee"></script>
-    <script type="text/javascript" src="utility-spec.coffee"></script>
     <script type="text/javascript" src="flat-template-spec.coffee"></script>
     <script type="text/javascript" src="func-template-spec.coffee"></script>
     <script type="text/javascript" src="embedded-template-spec.coffee"></script>
