--- a/spec/test-runner.html
+++ b/spec/test-runner.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <script type="text/javascript" src="../ext/jquery-1.7.1.js"></script>
-    <script type="text/javascript" src="../ext/DOMBuilder.html.min.js"></script>
+    <script type="text/javascript" src="../ext/DOMBuilder.dom.min.js"></script>
     <script type="text/javascript" src="../ext/underscore-min.js"></script>
     <script type="text/javascript" src="../ext/postal.js"></script>
     <script type="text/javascript" src="../ext/trafficCop-0.3.0.js"></script>
