--- a/html/tmpl/recipe.html
+++ b/html/tmpl/recipe.html
@@ -1,5 +1,6 @@
 <div class="test">
     <h2 data-id="title"></h2>
+	<img data-id="image"/>
     <div>
         <label>Description</label>
         <div data-id="description"></div>
