Improving IMG tag support.

--- a/html/tmpl/recipe.html
+++ b/html/tmpl/recipe.html
@@ -1,6 +1,6 @@
 <div class="test">
     <h2 data-id="title"></h2>
-	<img data-id="image"/>
+	<img data-id="image" width="320" height="280"/>
     <div>
         <label>Description</label>
         <div data-id="description"></div>
