breadcrumb ... rewriting all the fork join to use a single fork join pattern. *gulp*

--- a/spec/test-runner.html
+++ b/spec/test-runner.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="../ext/qunit-1.3.0pre.js"></script>
     <script type="text/javascript" src="../ext/pavlov-0.3.0pre.js"></script>
     <script type="text/javascript" src="../src/local.coffee"></script>
+    <script type="text/javascript" src="../src/spork.coffee"></script>
     <script type="text/javascript" src="../src/sourceResolver.coffee"></script>
     <script type="text/javascript" src="../src/template.coffee"></script>
     <script type="text/javascript" src="template-source.coffee"></script>
@@ -24,6 +25,7 @@
     <script type="text/javascript" src="interpolated-template-spec.coffee"></script>
     <script type="text/javascript" src="change-spec.coffee"></script>
     <script type="text/javascript" src="add-spec.coffee"></script>
+    <script type="text/javascript" src="fork-join-spec.coffee"></script>
     <link rel="stylesheet" type="text/css" href="qunit-1.3.0pre.css" />
 </head>
 <body >
