--- a/spec/test-runner.html
+++ b/spec/test-runner.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="../ext/qunit-1.3.0pre.js"></script>
     <script type="text/javascript" src="../ext/pavlov-0.3.0pre.js"></script>
     <script type="text/javascript" src="../src/local.coffee"></script>
-    <script type="text/javascript" src="../src/spork.coffee"></script>
+    <script type="text/javascript" src="../src/forkJoin.coffee"></script>
     <script type="text/javascript" src="../src/sourceResolver.coffee"></script>
     <script type="text/javascript" src="../src/template.coffee"></script>
     <script type="text/javascript" src="template-source.coffee"></script>
