Added better handling for models with missing properties and 'rootless' templates

--- a/spec/test-runner.html
+++ b/spec/test-runner.html
@@ -16,10 +16,12 @@
     <script type="text/javascript" src="template-source.coffee"></script>
     <script type="text/javascript" src="iterative-throughput-spec.coffee"></script>
     <script type="text/javascript" src="flat-template-spec.coffee"></script>
+    <script type="text/javascript" src="rootless-template-spec.coffee"></script>
     <script type="text/javascript" src="func-template-spec.coffee"></script>
     <script type="text/javascript" src="embedded-template-spec.coffee"></script>
     <script type="text/javascript" src="iterative-template-spec.coffee"></script>
     <script type="text/javascript" src="nested-template-spec.coffee"></script>
+    <script type="text/javascript" src="missing-model-spec.coffee"></script>
     <script type="text/javascript" src="parent-child-template-spec.coffee"></script>
     <script type="text/javascript" src="iterative-external-template-spec.coffee"></script>
     <script type="text/javascript" src="interpolated-template-spec.coffee"></script>
