Added better inference around __value__ properties and anchor tags. Added tests around anchor tag behavior.

--- a/spec/test-runner.html
+++ b/spec/test-runner.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="../src/template.coffee"></script>
     <script type="text/javascript" src="template-source.coffee"></script>
     <script type="text/javascript" src="iterative-throughput-spec.coffee"></script>
+    <script type="text/javascript" src="anchor-template-spec.coffee"></script>
     <script type="text/javascript" src="flat-template-spec.coffee"></script>
     <script type="text/javascript" src="rootless-template-spec.coffee"></script>
     <script type="text/javascript" src="func-template-spec.coffee"></script>
